# RustSapphoLib

./: README.md
sappho-lib/: Cargo.toml  rustfmt.toml
sappho-lib/src/: comps.rs  consts.rs  lib.rs  managers.rs  math.rs  models.rs  scripting.rs  value_aliases.rs
sappho-lib/src/comps/: actor.rs  stage.rs  verb.rs
sappho-lib/src/comps/actor/: actor_state.rs  actor_traits.rs  emotiondef.rs  perception.rs
sappho-lib/src/comps/verb/: inclinations.rs  verbdef.rs
sappho-lib/src/managers/: actor_manager.rs  def_database.rs  def_managers.rs  stage_manager.rs
sappho-lib/src/math/: bnum.rs  personality.rs
sappho-lib/src/math/bnum/: bnum_math.rs  bnum_traits.rs
sappho-lib/src/math/personality/: personality_math.rs  personality_traits.rs
sappho-lib/src/models/: bnum.rs  bnum_grp.rs  macros.rs  personality.rs  sparse_bnum.rs  sparse_bnum_grp.rs
sappho-lib/src/models/bnum/: bnum_math.rs  bnum_traits.rs
sappho-lib/src/models/bnum_grp/: bnum_grp_math.rs  bnum_grp_traits.rs
sappho-lib/src/models/personality/: personality_math.rs  personality_traits.rs
sappho-lib/src/models/sparse_bnum/: sparse_bnum_math.rs  sparse_bnum_traits.rs
sappho-lib/src/models/sparse_bnum_grp/: sparse_bnum_grp_math.rs  sparse_bnum_grp_traits.rs
sappho-lib/src/scripting/: ast.rs  ast_def.rs  ast_expr.rs  error.rs  sappho_script.pest  test.sappho
sappho-lib/src/scripting/ast_def/: actor.rs  actor_ast.rs  emotion.rs  emotion_ast.rs
