[package]
name = "sappho-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"
pest = { version = "2", features = ["const_prec_climber"] }
pest_derive = { version = "2" }